--- a/ajith.html
+++ b/ajith.html
@@ -1,4 +1,5 @@
 <center>
-  <h1>Vijay</h1>
+  <h1>Ajith</h1>
+  <p>Ajith Kumar Subramaniam is an Indian actor who works predominantly in Tamil cinema. To date, he has starred in over 63 films, and won four Vijay Awards, three Cinema Express Awards, three Filmfare Awards South and three Tamil Nadu State Film Awards. Wikipedia</p>
 </center>
-<br>
+<hr>
